@@ -4,7 +4,7 @@ import java.io.IOException;
 import java.net.ConnectException;
 import java.net.InetSocketAddress;
 import java.net.Socket;
-import java.net.URI;
+import java.net.URL;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -115,10 +115,10 @@ public class MyJDownloaderWaitingConnectionThread extends Thread {
                     Socket connectionSocket = null;
                     HTTPProxy proxy = null;
                     final InetSocketAddress addr = request.getConnectionHelper().getAddr();
-                    final URI uri = new URI("socket://" + SocketConnection.getHostName(addr) + ":" + addr.getPort());
+                    final URL url = new URL(null, "socket://" + SocketConnection.getHostName(addr) + ":" + addr.getPort(), ProxyController.SOCKETURLSTREAMHANDLER);
                     try {
                         connectThread.log("Connect " + addr);
-                        final List<HTTPProxy> list = ProxyController.getInstance().getProxiesByURI(uri, false, false);
+                        final List<HTTPProxy> list = ProxyController.getInstance().getProxiesByURL(url, false, false);
                         if (list != null && list.size() > 0) {
                             proxy = list.get(0);
                             connectionSocket = SocketConnectionFactory.createSocket(proxy);
@@ -136,7 +136,7 @@ public class MyJDownloaderWaitingConnectionThread extends Thread {
                                     connectionRequest.wait(5000);
                                 } catch (final InterruptedException ignore) {
                                 }
-                                throw new ConnectException("No available connection for: " + uri);
+                                throw new ConnectException("No available connection for: " + url);
                             }
                         }
                     } catch (Throwable throwable) {
@@ -144,7 +144,7 @@ public class MyJDownloaderWaitingConnectionThread extends Thread {
                             connectThread.log(throwable);
                             e = throwable;
                             if (proxy != null && !proxy.isNone() && throwable instanceof HTTPProxyException) {
-                                ProxyController.getInstance().reportHTTPProxyException(proxy, uri, (IOException) throwable);
+                                ProxyController.getInstance().reportHTTPProxyException(proxy, url, (IOException) throwable);
                             }
                         } finally {
                             try {
